k8s/minichallenge/apps.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: app-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: a
  template:
    metadata:
      labels:
        app: a
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
          - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: app-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: b
  template:
    metadata:
      labels:
        app: b
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
          - containerPort: 80
