k8s/minichallenge/services.yml
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  selector:
    app: a
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  selector:
    app: b
  ports:
    - port: 80
      targetPort: 80
