k8s/minichallenge/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /a
        pathType: Prefix
        backend:
          service:
            name: service-a
            port:
              number: 80
      - path: /b
        pathType: Prefix
        backend:
          service:
            name: service-b
            port:
              number: 80
